{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Mouse",
            "id": "7957a6e0-0272-4c06-85be-b2f3c65c0ebe",
            "actions": [
                {
                    "name": "Mouse Delta",
                    "type": "PassThrough",
                    "id": "5ba3b3d7-7a79-4d15-bebe-b40c4acd7297",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "712dcaa2-2d21-4c4f-a4c8-21f8e7ddc921",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse Delta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ButtonMash",
            "id": "76833813-b49c-4436-8842-acad1a300357",
            "actions": [
                {
                    "name": "Mash",
                    "type": "Button",
                    "id": "c440b2c6-b989-4ac9-b5a6-735d8a3ca5c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2480eae1-e1d3-49cd-808b-2e6a99a52742",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74e38882-e3dd-4d76-a24c-f70dfc548ee2",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "StandardMovement",
            "id": "cbd146cd-8752-4bb6-821c-203424e03903",
            "actions": [
                {
                    "name": "HorizMove",
                    "type": "Button",
                    "id": "da7c358e-2e48-44b8-ad62-e5c7a08e1dce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VertMove",
                    "type": "Button",
                    "id": "09e2dafe-b289-4e34-acce-fd876dadd8dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8a82a05e-a890-4d10-b2a9-cb85e3b34017",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "5d32ace2-dac5-4706-b273-0fcbf460c827",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "06557b55-2113-4ea1-be30-94d232be0e4f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "58f7647a-a02c-4aa0-bacd-14e1c2f44d28",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e2cb7327-977e-42ec-b2eb-a91412fe763f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "cc1c3e55-4219-4cfd-8fb9-e5a62e082923",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VertMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4ab4d882-dcda-4acc-913e-de612fef8b24",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VertMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8bd32873-9039-4b2d-8eea-d59e42d140f6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VertMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}